chore: added variable in globalcss

--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
-*{
-  font-family: Outfit;
+
+@theme{
+  --color-background: #000000;
+  --color-text: #ffffff;
 }
