--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
+html {
+  scroll-behavior: smooth;
+}
 
 @theme{
   --color-background: #000000;
