--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -9,3 +9,22 @@ html {
   --color-background: #000000;
   --color-text: #ffffff;
 }
+@keyframes typing{
+  from{
+    width: 0ch;
+  }
+  to{
+    width: 15ch;
+  }
+}
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+.continuous{
+  white-space: nowrap;
+  border-right: 2px solid white; 
+  width: 0;
+  animation: typing 3s steps(20) forwards, blink 0.75s step-end infinite;
+}
