--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -23,8 +23,9 @@ html {
   }
 }
 .continuous{
+ overflow: hidden;
   white-space: nowrap;
-  border-right: 2px solid white; 
+  border-right: 2px solid white; /* Cursor */
   width: 0;
   animation: typing 3s steps(20) forwards, blink 0.75s step-end infinite;
 }
