--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -5,27 +5,32 @@ html {
   scroll-behavior: smooth;
 }
 
-@theme{
+@theme {
   --color-background: #000000;
   --color-text: #ffffff;
 }
-@keyframes typing{
-  from{
+
+@keyframes typing {
+  from {
     width: 0ch;
   }
-  to{
-    width: 17ch;
+
+  to {
+    width: 18ch;
   }
 }
+
 @keyframes blink {
   50% {
     border-color: transparent;
   }
 }
-.continuous{
- overflow: hidden;
+
+.continuous {
+  overflow: hidden;
   white-space: nowrap;
-  border-right: 2px solid white; /* Cursor */
+  border-right: 2px solid white;
+  /* Cursor */
   width: 0;
   animation: typing 3s steps(20) forwards, blink 0.75s step-end infinite;
 }
